--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -94,6 +94,19 @@
   url       = {https://www.jstor.org/stable/29737695},
 }
 
+@Article{Abellan2021,
+  author    = {Abellán, S. and Candel Bormann, D. and Sáez de Adana, F. and García, A.},
+  title     = {Quality {TV} and cultural origin: A mixed method analysis of the historical series {The Crown} ({Netflix}) and {Isabel} ({RTVE})},
+  journal   = {English Text Construction},
+  year      = {2021},
+  volume    = {14},
+  number    = {2},
+  pages     = {150-181},
+  doi       = {10.1075/etc.00045.abe},
+  owner     = {Vincent},
+  timestamp = {2022.05.25},
+}
+
 @Article{Abraham2006,
   author    = {Abraham, L. and Appiah, O.},
   title     = {Framing News Stories: The Role of Visual Imagery in Priming Racial Stereotypes},
@@ -4122,6 +4135,18 @@
   url       = {https://dl.acm.org/citation.cfm?id=1596416},
 }
 
+@Electronic{Blambot2022,
+  author       = {{Blambot}},
+  month        = {05},
+  year         = {2022},
+  title        = {Comic Book Grammar \& Tradition},
+  howpublished = {\url{https://blambot.com/pages/comic-book-grammar-tradition}},
+  organization = {{Blambot}},
+  url          = {https://blambot.com/pages/comic-book-grammar-tradition},
+  owner        = {Vincent},
+  timestamp    = {2022.05.27},
+}
+
 @Article{Blascheck2017,
   author    = {Blascheck, T. and Schweizer, M. and Beck, F. and Ertl, T.},
   title     = {Visual Comparison of Eye Movement Patterns},
@@ -6126,6 +6151,32 @@
   url       = {https://books.google.fr/books/about/Brokerage_and_Closure.html},
 }
 
+@Article{Bushell2022,
+  author    = {Bushell, S. and Butler, J. O. and Hay, D. and Hutcheon, R.},
+  title     = {Digital Literary Mapping: {I}. Visualizing and Reading Graph Topologies as Maps for Literature},
+  journal   = {Cartographica},
+  year      = {2022},
+  volume    = {57},
+  number    = {1},
+  pages     = {11-36},
+  doi       = {10.3138/cart-2021-0008},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
+@Article{Bushell2022a,
+  author    = {Bushell, S. and Butler, J. O. and Hay, D. and Hutcheon, R.},
+  title     = {Digital Literary Mapping: {II}. Towards an Integrated Visual-Verbal Method for the Humanities},
+  journal   = {Cartographica},
+  year      = {2022},
+  volume    = {57},
+  number    = {1},
+  pages     = {37-64},
+  doi       = {10.3138/cart-2021-0007},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
 @Book{Bushnell2007,
   title     = {Tragedy: A short introduction},
   publisher = {Blackwell},
@@ -6887,6 +6938,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.12.27},
 }
 
+@Article{Cen2022,
+  author    = {Cen, J. and Jin, P. and Feng, Q.},
+  title     = {An Analysis of the Shi Clan Connections in the Wei-Jin and North-South Dynasties Based on the Character Network of Shishuoxinyu},
+  journal   = {Journal of Computer and Communications},
+  year      = {2022},
+  volume    = {10},
+  number    = {05},
+  pages     = {8},
+  doi       = {10.4236/jcc.2022.105001},
+  owner     = {Vincent},
+  timestamp = {2022.06.04},
+}
+
 @Article{Cer2018,
   author    = {Cer, Daniel and Yang, Yinfei and Kong, Sheng-Yi and Hua, Nan and Limtiaco, Nicole and St. John, Rhomni and Constant, Noah and Guajardo-Cespedes, Mario and Yuan, Steve and Tar, Chris and Sung, Yun-Hsuan and Strope, Brian and Kurzweil, Ray},
   title     = {Universal Sentence Encoder},
@@ -7566,6 +7630,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.06.24},
 }
 
+@Article{Chen2020b,
+  author    = {Chen, X. and Kang, B. and Lijffijt, J. and De Bie, T.},
+  title     = {ALPINE: Active Link Prediction using Network Embedding},
+  journal   = {Applied Sciences},
+  year      = {2021},
+  volume    = {11},
+  number    = {11},
+  pages     = {5043},
+  doi       = {10.3390/app11115043},
+  owner     = {Vincent},
+  timestamp = {2020.02.08},
+}
+
 @InProceedings{Chen2021h,
   author        = {Chen, Y. and Ling, Z.-H. and Liu, Q.-F.},
   title         = {A Neural-Network-Based Approach to Identifying Speakers in Novels},
@@ -7689,6 +7766,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.3389/fpsyg.2015.00906},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Chiroux2022,
+  author    = {Chiroux, Adrien},
+  title     = {Hesse, Woolf, and the Art of Reconstruction},
+  booktitle = {1922/2022 - Total Modernism: Continuity, Discontinuity, And The Experimental Turn},
+  year      = {2022},
+  abstract  = {Written at the end of the 1920s, Hermann Hesse’s Der Steppenwolf (1927) and Virginia Woolf’s The Waves (1931), modernist novels par excellence, are marked by the discoveries of their time, more particularly those of psychoanalysis. Through the use of fragmentation devices (of the novelistic structure, the plot, the narrative) or through the complex network of characters organized around a central figure, these two novels explore the new conceptions of identity proposed by S. Freud and C. G. Jung. By doing so, they confer a modernist orientation to the Bildungsroman: the formation of the hero now corresponds to the understanding and integration of the different facets of a fragmented psyche. Nevertheless, far from being reduced to a mere literary transposition of these theories, these works, when taken in their aesthetic totality, actually constitute what could be called – using the verb bilden also presents in Bildungsroman – Gebildete Romane (“constructed novels”). The novelistic divisions and the multiplication of voices generate the presence of different points of view that confront and dialogue with each other until they interweave so deeply that they form the novels themselves. These novels, conceived as the results of a dialectic between fragmentation and composition, deconstruction and (re)construction, thus constitute singular literary objects in that they reinvent the genre of the novel by drawing on the writing processes of the avant-gardes and on a new conception of identity.},
+  owner     = {Vincent},
+  timestamp = {2022.05.23},
+  url       = {https://dial.uclouvain.be/pr/boreal/object/boreal:260897},
 }
 
 @InCollection{Chnes2012,
@@ -7823,6 +7911,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://dl.acm.org/citation.cfm?id=1866782},
 }
 
+@Article{Christenson2011,
+  author    = {Christenson, H.},
+  title     = {{HathiTrust}},
+  journal   = {Library Resources \& Technical Services},
+  year      = {2011},
+  volume    = {55},
+  number    = {2},
+  pages     = {93-102},
+  doi       = {10.5860/lrts.55n2.93},
+  owner     = {Vincent},
+  timestamp = {2022.06.14},
+}
+
 @Article{Christou2021,
   author    = {Christou, D. and Tsoumakas, G.},
   title     = {Extracting Semantic Relationships in Greek Literary Texts},
@@ -7891,6 +7992,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.inffus.2020.02.005},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@MastersThesis{Chu2022a,
+  author      = {Chu , C. X.},
+  title       = {Knowledge Extraction from Fictional Texts},
+  year        = {2022},
+  type        = {Engineering Thesis},
+  institution = {Universität des Saarlandes},
+  owner       = {Vincent},
+  timestamp   = {2022.05.21},
+  url         = {https://publikationen.sulb.uni-saarland.de/bitstream/20.500.11880/32914/1/thesis-twoside-toprint.pdf},
 }
 
 @InProceedings{Chua2009,
@@ -7963,6 +8075,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.37236/1142},
   owner     = {Vincent},
   timestamp = {2021.02.04},
+}
+
+@Article{Chute2008,
+  author    = {Chute, H.},
+  title     = {Comics as Literature? Reading Graphic Narrative},
+  journal   = {Publications of the Modern Language Association},
+  year      = {2008},
+  volume    = {123},
+  number    = {2},
+  pages     = {452-465},
+  owner     = {Vincent},
+  timestamp = {2022.05.12},
+  url       = {https://www.jstor.org/stable/25501865},
 }
 
 @Article{Chyrun2016,
@@ -12332,6 +12457,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1155/2021/9439583},
   owner     = {Vincent},
   timestamp = {2021.07.12},
+}
+
+@Article{Fan2022,
+  author    = {Fan, C. and Li, Y.},
+  title     = {Network Extraction and Analysis of Character Relationships in Chinese Literary Works},
+  journal   = {Computational Intelligence and Neuroscience},
+  year      = {2022},
+  volume    = {2022},
+  pages     = {7295834},
+  doi       = {10.1155/2022/7295834},
+  owner     = {Vincent},
+  timestamp = {2022.05.19},
 }
 
 @InProceedings{Fang2006,
@@ -17968,6 +18105,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.12.15},
 }
 
+@InProceedings{Hoque2022,
+  author    = {Hoque, N. and Ghai, B. and Elmqvist, N.},
+  title     = {DramatVis Personae: Visual Text Analytics for Identifying Social Biases in Creative Writing},
+  booktitle = {ACM Conference on Designing Interactive Systems},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.06.02},
+  url       = {https://users.umiacs.umd.edu/~elm/projects/dvp/dvp.pdf},
+}
+
 @InCollection{Horadam2014,
   author    = {Alzahrani, T. and Horadam, K. J.},
   title     = {Community Detection in Bipartite Networks: Algorithms and Case studies},
@@ -18295,6 +18442,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.15},
 }
 
+@Electronic{Huang2022,
+  author       = {Huang, K.},
+  month        = {01},
+  year         = {2022},
+  title        = {Character Network},
+  howpublished = {\url{https://github.com/hzjken/character-network}},
+  organization = {{Apple}},
+  url          = {https://github.com/hzjken/character-network},
+  owner        = {Vincent},
+  timestamp    = {2022.06.05},
+}
+
 @Article{Hubert1985,
   author    = {Hubert, L. and Arabie, P.},
   title     = {Comparing partitions},
@@ -18534,6 +18693,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://us.sagepub.com/en-us/nam/dimensions-of-human-behavior/book259362},
 }
 
+@Article{Hutto2014,
+  author    = {Hutto, C. and Gilbert, E.},
+  title     = {VADER: A Parsimonious Rule-Based Model for Sentiment Analysis of Social Media Text},
+  journal   = {International AAAI Conference on Web and Social Media},
+  year      = {2014},
+  volume    = {8},
+  number    = {1},
+  pages     = {216-225},
+  owner     = {Vincent},
+  timestamp = {2022.06.14},
+  url       = {https://ojs.aaai.org/index.php/ICWSM/article/view/14550},
+}
+
 @Book{Hutton1982,
   title     = {Aristotle's Poetics},
   publisher = {Norton},
@@ -18611,6 +18783,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-03520-4_16},
   owner     = {Vincent},
   timestamp = {2021.03.06},
+}
+
+@InProceedings{Inoue2022,
+  author    = {Inoue, N. and Pethe, C. and Kim, A. and Skiena, S.},
+  title     = {Learning and Evaluating Character Representations in Novels},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2022},
+  pages     = {1008-1019},
+  owner     = {Vincent},
+  timestamp = {2022.05.19},
+  url       = {https://aclanthology.org/2022.findings-acl.81/},
 }
 
 @InProceedings{Iosif2014,
@@ -20062,6 +20245,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/522917},
 }
 
+@Electronic{Kalmus2022,
+  author       = {Kalmus, J.-L. and Valiente, C.},
+  month        = {06},
+  year         = {2022},
+  title        = {The {Simpsons} network},
+  howpublished = {\url{http://thesimpsonsuniverse.weebly.com/network.html}},
+  organization = {{The Simpsons Universe}},
+  url          = {http://thesimpsonsuniverse.weebly.com/network.html},
+  owner        = {Vincent},
+  timestamp    = {2022.06.06},
+}
+
 @InProceedings{Kambhatla2004,
   author    = {Kambhatla, N.},
   title     = {Combining lexical, syntactic, and semantic features with maximum entropy models for extracting relations},
@@ -20530,6 +20725,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0160452},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Electronic{Khan2019,
+  author       = {Khan, S.},
+  month        = {04},
+  year         = {2019},
+  title        = {{Game of Thrones} and Graph Theory},
+  howpublished = {\url{https://www.mapleprimes.com/maplesoftblog/210356-Game-Of-Thrones-And-Graph-Theory}},
+  organization = {{MaplePrimes}},
+  url          = {https://www.mapleprimes.com/maplesoftblog/210356-Game-Of-Thrones-And-Graph-Theory},
+  owner        = {Vincent},
+  timestamp    = {2022.06.06},
 }
 
 @Article{Khan2021,
@@ -21273,6 +21480,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/1600910x.2012.745811},
   owner     = {Vincent},
   timestamp = {2021.12.27},
+}
+
+@Article{Kokash2022,
+  author    = {Kokash, N. and Romanello, M. and Suyver, E. and Colavizza, G.},
+  title     = {From Books to Knowledge Graphs},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {cs.DL},
+  pages     = {2204.10766},
+  doi       = {10.48550/arXiv.2204.10766},
+  owner     = {Vincent},
+  timestamp = {2022.04.29},
 }
 
 @InProceedings{Kokkinakis2004,
@@ -22079,6 +22298,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.36548/jaicn.2019.1.001},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@Article{Kumar2022b,
+  author    = {Kumar, A. M. and Goh, J. Y. Q. and Tan, T. H. H. and Siew, C. S. Q.},
+  title     = {Gender Stereotypes in Hollywood Movies and Their Evolution over Time: Insights from Network Analysis},
+  journal   = {Big Data and Cognitive Computing},
+  year      = {2022},
+  volume    = {6},
+  number    = {2},
+  pages     = {50},
+  doi       = {10.3390/bdcc6020050},
+  owner     = {Vincent},
+  timestamp = {2022.05.10},
 }
 
 @InProceedings{Kumaran2016,
@@ -23432,6 +23664,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.18},
   url       = {https://www.wjkbooks.com/Products/0664232450/the-old-testament-between-theology-and-history.aspx},
+}
+
+@InProceedings{Leong2022,
+  author    = {Leong, W. and Porteous, J. and Thangarajah, J.},
+  title     = {Automated Story Sifting Using Story Arcs},
+  booktitle = {21st International Conference on Autonomous Agents and Multiagent Systems},
+  year      = {2022},
+  pages     = {1669-1671},
+  abstract  = {Story sifting (or story recognition) allows for the exploration of events, stories and patterns that emerge from agent-based simulations. The goal of this work is to automate and reduce the authoring burden for writing sifting queries. In this paper, we use the event traces of agent-based simulations to create Dynamic Character Networks that track the changing relationship scores between every agent in a simulation. These networks allow for the fortunes between any two agents to be plotted against time as a story arc. Similarity scores between story arcs from the simulation and a user's query arc can be calculated using the Dynamic Time Warping technique. Events corresponding to the story arc that best matches the query arc can then be returned to the user, thus providing an intuitive means for users to sift a variety of stories without coding a search query. These components are implemented in our experimental prototype Arc Sift. The results of a user study support our expectation that Arc Sift is an intuitive and accurate tool that allows human users to sift stories out from a larger chronicle of events produced by an agent-based simulation.},
+  owner     = {Vincent},
+  timestamp = {2022.05.14},
+  url       = {https://dl.acm.org/doi/abs/10.5555/3535850.3536071},
 }
 
 @InProceedings{Leordeanu2005,
@@ -25365,6 +25609,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Luo2022,
+  author    = {Luo, T.},
+  title     = {Novel Multirole-Oriented Deep Learning Text Classification Model},
+  journal   = {Security and Communication Networks},
+  year      = {2022},
+  volume    = {2022},
+  pages     = {8942841},
+  doi       = {10.1155/2022/8942841},
+  owner     = {Vincent},
+  timestamp = {2022.04.02},
+}
+
 @InProceedings{Luqman2013,
   author    = {Luqman, M. M. and Ho, H. N. and Burie, J.-C. and Ogier, J.-M.},
   title     = {Automatic indexing of comic page images for query by example based focused content retrieval},
@@ -25503,6 +25759,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://books.google.fr/books/about/Manuscript_Makeover.html?id=py2yTK1hodYC},
+}
+
+@Electronic{Lyon2016,
+  author       = {Lyon, W.},
+  month        = {06},
+  year         = {2016},
+  title        = {Analyzing the {Graph of Thrones}},
+  howpublished = {\url{https://lyonwj.com/blog/graph-of-thrones-neo4j-social-network-analysis}},
+  organization = {{@lyonwj}},
+  url          = {https://lyonwj.com/blog/graph-of-thrones-neo4j-social-network-analysis},
+  owner        = {Vincent},
+  timestamp    = {2022.06.05},
 }
 
 @Article{Lyons2005,
@@ -31202,6 +31470,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Panko2022,
+  author    = {Panko, J.},
+  title     = {Reading Novels, Reading Networks: Mark Z. Danielewski's The Familiar, Social Media, and the Digital Literary Sphere},
+  journal   = {Orbit: A Journal of American Literature},
+  year      = {2022},
+  volume    = {10},
+  number    = {2},
+  pages     = {7},
+  doi       = {10.16995/orbit.4799},
+  owner     = {Vincent},
+  timestamp = {2022.04.09},
+}
+
 @Article{Papadopoulos2012a,
   author    = {Papadopoulos, S. and Kompatsiaris, Y. and Vakali, A. and Spyridonos, P.},
   title     = {Community detection in Social Media - Performance and application considerations},
@@ -32508,7 +32789,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {155-161},
   owner     = {Vincent},
   timestamp = {2016.10.10},
-  url       = {https://arxiv.org/abs/1610.01720v1},
+  url       = {https://arxiv.org/abs/1610.01720},
 }
 
 @Article{Poppe2009,
@@ -35860,6 +36141,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Narrative_Psychology.html?id=OJFrAAAAIAAJ},
 }
 
+@Article{Sarkanych2022,
+  author    = {Sarkanych, P. and Fedorak, N. and Holovatch, Y. and MacCarron, P. and Yose, J. and Kenna, R.},
+  title     = {Network analysis of the Kyiv bylyny cycle - East Slavic epic narratives},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {physics.soc-ph},
+  pages     = {2203.10399},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://arxiv.org/abs/2203.10399},
+}
+
 @Article{Sarkar2005,
   author    = {Sarkar, P. and Moore, A. W.},
   title     = {Dynamic social network analysis using latent space models},
@@ -36306,6 +36599,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/27784811},
 }
 
+@Article{Schredl2022,
+  author    = {Schredl, M. and Schweickert, R.},
+  title     = {Social network in the 2015 dreams of a male dreamer},
+  journal   = {International Journal of Dream Research Volume},
+  year      = {2022},
+  volume    = {15},
+  number    = {1},
+  pages     = {118-125},
+  doi       = {10.11588/ijodr.2022.1.85607},
+  owner     = {Vincent},
+  timestamp = {2022.04.04},
+}
+
 @Book{Schreibman2008,
   title     = {A Companion to Digital Literary Studies},
   publisher = {Blackwell},
@@ -36386,6 +36692,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.14},
   url       = {https://www.osti.gov/biblio/960616},
+}
+
+@InCollection{Schweickert2007,
+  author    = {Schweickert, R.},
+  title     = {Social networks of characters in dreams},
+  booktitle = {The new science of dreaming: Vol. 3. Cultural and theoretical perspectives},
+  publisher = {Praeger Publishers/Greenwood Publishing Group},
+  year      = {2007},
+  pages     = {277-297},
+  owner     = {Vincent},
+  timestamp = {2022.04.04},
+  url       = {https://psycnet.apa.org/record/2007-09897-011},
+}
+
+@InCollection{Schweickert2007a,
+  author    = {Schweickert, R.},
+  title     = {The Structure of Semantic and Phonological Networks and the Structure of a Social Network in Dreams},
+  booktitle = {The Foundations of Remembering},
+  publisher = {Psychology Press},
+  year      = {2007},
+  owner     = {Vincent},
+  timestamp = {2022.04.04},
+  url       = {https://www.taylorfrancis.com/chapters/mono/10.4324/9780203837672-22/structure-semantic-phonological-networks-structure-social-network-dreams-james-nairne},
 }
 
 @Article{Schweinberger2011,
@@ -38157,6 +38486,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.84.046102},
   owner     = {Vincent},
   timestamp = {2021.03.06},
+}
+
+@InProceedings{Stanovsky2018,
+  author    = {Stanovsky, G. and Michael, J. and Zettlemoyer, L. and Dagan, I.},
+  title     = {Supervised Open Information Extraction},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {885-895},
+  doi       = {10.18653/v1/n18-1081},
+  owner     = {Vincent},
+  timestamp = {2022.06.14},
 }
 
 @Article{Stanton1967,
@@ -41248,6 +41588,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.07.03},
 }
 
+@Electronic{Vatsal2022,
+  author       = {Vatsal, P.},
+  month        = {01},
+  year         = {2022},
+  title        = {Mining and Modelling Character Networks - Part I},
+  howpublished = {\url{https://towardsdatascience.com/mining-modelling-character-networks-part-i-e37e4878c467}},
+  organization = {{Towards Data Science}},
+  url          = {https://towardsdatascience.com/mining-modelling-character-networks-part-i-e37e4878c467},
+  owner        = {Vincent},
+  timestamp    = {2022.06.06},
+}
+
+@Electronic{Vatsal2022a,
+  author       = {Vatsal, P.},
+  month        = {01},
+  year         = {2022},
+  title        = {Mining and Modelling Character Networks - Part II},
+  howpublished = {\url{https://towardsdatascience.com/mining-modelling-character-networks-part-ii-a3d77de89638}},
+  organization = {{Towards Data Science}},
+  url          = {https://towardsdatascience.com/mining-modelling-character-networks-part-ii-a3d77de89638},
+  owner        = {Vincent},
+  timestamp    = {2022.06.06},
+}
+
 @Article{Vazquez2002a,
   author    = {Vazquez, A. and Pastor-Satorras, R. and Vespignani, A.},
   title     = {Large-scale topological and dynamical properties of the Internet},
@@ -41259,6 +41623,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.65.066130},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Electronic{Ved2018,
+  author       = {Ved, M.},
+  month        = {06},
+  year         = {2018},
+  title        = {Network Analysis with {Gephi} - An Application Case : ``{The Simpsons}'' Season 4},
+  howpublished = {\url{https://medium.com/@mehulved1503/network-analysis-an-application-case-the-simpsons-season-4-6dec557fa4e0}},
+  organization = {{Medium}},
+  url          = {https://medium.com/@mehulved1503/network-analysis-an-application-case-the-simpsons-season-4-6dec557fa4e0},
+  owner        = {Vincent},
+  timestamp    = {2022.06.06},
 }
 
 @Article{Vendrig2002,
@@ -42161,6 +42537,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3391298},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Article{Wang2022n,
+  author    = {Wang, Z. and Huang, J.},
+  title     = {Research on Characterization and Shaping of Chinese Heroic Characters in Online Media Based on Deep Neural Network Evaluation},
+  journal   = {Wireless Communications and Mobile Computing},
+  year      = {2022},
+  volume    = {2022},
+  pages     = {5485284},
+  doi       = {10.1155/2022/5485284},
+  owner     = {Vincent},
+  timestamp = {2022.06.09},
 }
 
 @Article{Wanner2011,
@@ -43702,6 +44090,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.tib.eu/en/search/id/BLCP%3ACN055695260/Changing-Correlations-in-Networks-Assortativity/},
 }
 
+@Article{Yamada2009,
+  author    = {Yamada, M. and Murai, Y.},
+  title     = {Story visualization of literary works},
+  journal   = {Journal of Visualization},
+  year      = {2009},
+  volume    = {12},
+  number    = {2},
+  pages     = {181-188},
+  doi       = {10.1007/bf03181960},
+  owner     = {Vincent},
+  timestamp = {2022.05.14},
+}
+
+@Article{Yamada2010,
+  author    = {Yamada, M. and Murai, Y.},
+  title     = {Stereoscopic story visualization in literary works demonstrated by Shakespeare's plays},
+  journal   = {Journal of Visualization},
+  year      = {2010},
+  volume    = {13},
+  number    = {4},
+  pages     = {355-363},
+  doi       = {10.1007/s12650-010-0050-1},
+  owner     = {Vincent},
+  timestamp = {2022.05.14},
+}
+
 @Article{Yamada2011,
   author    = {Yamada, T. and Letunic, I. and Okuda, S. and Kanehisa, M. and Bork, P.},
   title     = {{iPath}2.0: interactive pathway explorer},
@@ -43713,6 +44127,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/nar/gkr313},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@Article{Yamada2013,
+  author    = {Yamada, M. and Murai, Y. and Kumagai, I.},
+  title     = {Story visualization of novels with multi-theme keyword density analysis},
+  journal   = {Journal of Visualization},
+  year      = {2013},
+  volume    = {16},
+  number    = {3},
+  pages     = {247-257},
+  doi       = {10.1007/s12650-013-0163-4},
+  owner     = {Vincent},
+  timestamp = {2022.05.14},
 }
 
 @TechReport{Yanagawa2007,
@@ -44951,6 +45378,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.05},
 }
 
+@Article{Zhang2022,
+  author    = {Zhang, Z. and Gu, Y. and Plummer, B. A. and Miao, X. and Liu, J. and Wang, H.},
+  title     = {Effectively leveraging Multi-modal Features for Movie Genre Classification},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {cs.CV},
+  pages     = {2203.13281},
+  doi       = {10.48550/arXiv.2203.13281},
+  owner     = {Vincent},
+  timestamp = {2022.04.02},
+}
+
 @Article{Zhao2003,
   author    = {Zhao, W. and Chellappa, R. and Phillips, P. J. and Rosenfeld, A.},
   title     = {Face recognition},
@@ -45068,6 +45507,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2021.3107297},
   owner     = {Vincent},
   timestamp = {2021.08.30},
+}
+
+@Article{Zhao2022,
+  author    = {Zhao, J. and Wei, Y. and Wu, B.},
+  title     = {Analysis of the Social Network and the Evolution of the Influence of Ancient Chinese Poets},
+  journal   = {Social Science Computer Review},
+  year      = {2022},
+  pages     = {089443932110281},
+  doi       = {10.1177/08944393211028182},
+  owner     = {Vincent},
+  timestamp = {2022.05.14},
 }
 
 @InProceedings{Zheleva2009,
