--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -9052,11 +9052,12 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @InProceedings{Cuesta-Lazaro2022,
   author    = {Cuesta-Lazaro, C. and Prasad, A. and Wood, T.},
   title     = {What does the sea say to the shore? A BERT based DST style approach for speaker to dialogue attribution in novels},
-  booktitle = {Annual Meetings of the Association for Computational Linguistics},
+  booktitle = {60th Annual Meeting of the Association for Computational Linguistics},
   year      = {2022},
+  pages     = {5820-5829},
+  doi       = {10.18653/v1/2022.acl-long.400},
   owner     = {Vincent},
   timestamp = {2022.03.15},
-  url       = {https://www.amazon.science/publications/what-does-the-sea-say-to-the-shore-a-bert-based-dst-style-approach-for-speaker-to-dialogue-attribution-in-novels},
 }
 
 @Article{Cui2019,
@@ -13655,6 +13656,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2010.06.03},
   url       = {http://books.google.com/books?id=VcxqQgAACAAJ&dq=The+Development+of+Social+Network+Analysis:+A+Study+in+the+Sociology+of+Science&hl=en&ei=xIlhTIfFONq5jAfU4eifCQ&sa=X&oi=book_result&ct=result&resnum=1&ved=0CCgQ6AEwAA},
+}
+
+@InProceedings{Freitas2009,
+  author    = {Freitas, C. and Santos, D. and Mota, C. and Gonçalo Oliveira, H. and Carvalho, P.},
+  title     = {Relation detection between named entities: report of a shared task},
+  booktitle = {NAACL HLT Workshop on Semantic Evaluations},
+  year      = {2009},
+  pages     = {129-137},
+  owner     = {Vincent},
+  timestamp = {2022.06.19},
+  url       = {https://aclanthology.org/W09-2421/},
 }
 
 @InProceedings{Frens2018,
@@ -36071,6 +36083,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cambridge.org/fr/academic/subjects/philosophy/philosophy-texts/selected-critical-writings-george-santayana},
 }
 
+@InProceedings{Santos2006,
+  author    = {Santos, D. and Seco, N. and Cardoso, N. and Vilela, R.},
+  title     = {HAREM: An Advanced NER Evaluation Contest for Portuguese},
+  booktitle = {5th International Conference on Language Resources and Evaluation},
+  year      = {2006},
+  owner     = {Vincent},
+  timestamp = {2022.06.19},
+  url       = {https://aclanthology.org/L06-1027/},
+}
+
 @InProceedings{Santos2010,
   author    = {Santos, D. and Mamede, N. and Baptista, J.},
   title     = {Extraction of family relations between entities},
@@ -36494,6 +36516,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4230/OASIcs.LDK.2021.9},
   owner     = {Vincent},
   timestamp = {2021.12.28},
+}
+
+@InProceedings{Schmidt2022,
+  author    = {Schmidt, T. and Hoffmann, J. and Wolff, C.},
+  title     = {Analyzing Character Networks in Crossover Fan Fictions of Archive of Our Own},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.06.18},
+  url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_14.pdf},
 }
 
 @InProceedings{Schmitt2009,
@@ -37729,6 +37761,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.05.14},
   url       = {http://www.dialog-21.ru/media/4332/skorinkind.pdf},
+}
+
+@InProceedings{Skorzewski2019,
+  author    = {Skórzewski, P.},
+  title     = {Using Book Dialogues to~Extract Emotions from~Texts},
+  booktitle = {Language and Technology Conference},
+  year      = {2019},
+  volume    = {13212},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {244-255},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-05328-3_16},
+  owner     = {Vincent},
+  timestamp = {2022.06.15},
 }
 
 @Article{Skowron2016,
@@ -41752,6 +41798,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1374489.1374501},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@InProceedings{Vilain1995,
+  author    = {Vilain, M. and Burger, J. and Aberdeen, J. and Connolly, D. and Hirschman, L.},
+  title     = {A model-theoretic coreference scoring scheme},
+  booktitle = {6th conference on Message understanding},
+  year      = {1995},
+  pages     = {45-52},
+  doi       = {10.3115/1072399.1072405},
+  owner     = {Vincent},
+  timestamp = {2022.06.19},
 }
 
 @InProceedings{Vinciarelli2007,
