--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3459,6 +3459,19 @@
   url       = {https://scholar.google.com/scholar?hl=en&as_sdt=0,5&cluster=6206798175555110139},
 }
 
+@InCollection{Berezkin2016,
+  author    = {Berezkin, Y. E.},
+  title     = {Peopling of the New World from Data on Distributions of Folklore Motifs},
+  booktitle = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
+  publisher = {Springer},
+  year      = {2016},
+  series    = {Understanding Complex Systems},
+  pages     = {71-89},
+  doi       = {10.1007/978-3-319-39445-9_5},
+  owner     = {Vincent},
+  timestamp = {2022.06.20},
+}
+
 @InProceedings{Berg2004,
   author    = {Berg, T. L. and Berg, A. C. and Edwards, J. and Maire, M. and White, R. and Teh, Y.-W. and Learned-Miller, E. and Forsyth, D. A.},
   title     = {Names and faces in the news},
@@ -4302,6 +4315,16 @@
   url       = {https://arxiv.org/abs/2004.10934},
 }
 
+@Book{Bod2013,
+  title     = {A New History of the Humanities},
+  publisher = {Oxford University Press},
+  year      = {2013},
+  author    = {Bod, R.},
+  doi       = {10.1093/acprof:oso/9780199665211.001.0001},
+  owner     = {Vincent},
+  timestamp = {2022.06.20},
+}
+
 @Book{Bode2012,
   title     = {Reading by numbers: Recalibrating the literary field},
   publisher = {Anthem Press},
@@ -4436,6 +4459,19 @@
   doi       = {10.4230/OASIcs.CMN.2013.30},
   owner     = {Vincent},
   timestamp = {2015.11.19},
+}
+
+@Article{Bollobas1981,
+  author    = {Bollobas, B.},
+  title     = {The Diameter of Random Graphs},
+  journal   = {Transactions of the American Mathematical Society},
+  year      = {1981},
+  volume    = {267},
+  number    = {1},
+  pages     = {41},
+  doi       = {10.2307/1998567},
+  owner     = {Vincent},
+  timestamp = {2022.06.20},
 }
 
 @Book{Bollobas1985,
@@ -12049,6 +12085,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.renyi.hu/~p_erdos/1959-11.pdf},
 }
 
+@Article{Erdos1960,
+  author    = {Erdős, P. and Rényi, A.},
+  title     = {On the Evolution of Random Graphs},
+  journal   = {Publications of the Mathematical Institute of the Hungarian Academy of Sciences},
+  year      = {1960},
+  volume    = {5},
+  number    = {17},
+  pages     = {17-61},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {http://www.renyi.hu/~p_erdos/1960-10.pdf},
+}
+
 @InCollection{Erickson2004,
   author    = {Erickson, B. H.},
   title     = {Social Networks},
@@ -16247,6 +16296,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/1963405.1963484},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@PhdThesis{Gurevitch1961,
+  author    = {Gurevitch, M.},
+  title     = {The social structure of acquaintanceship networks},
+  school    = {Massachusetts Institute of Technology},
+  year      = {1961},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.06.20},
+  url       = {https://dspace.mit.edu/handle/1721.1/11312},
 }
 
 @Book{Gurr2009,
@@ -29957,17 +30017,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.10.04},
 }
 
-@Article{Newman2003,
-  author    = {Newman, M. L. and Pennebaker, J. W. and Berry, D. S. and Richards, J. M.},
-  title     = {Lying Words: Predicting Deception from Linguistic Styles},
-  journal   = {Personality and Social Psychology Bulletin},
+@InCollection{Newman2003,
+  author    = {Newman, M. E. J.},
+  title     = {Random graphs as models of networks},
+  booktitle = {Handbook of Graphs and Networks: From the Genome to the Internet},
+  publisher = {Wiley-VCH},
   year      = {2003},
-  volume    = {29},
-  number    = {5},
-  pages     = {665-675},
-  doi       = {10.1177/0146167203029005010},
+  chapter   = {2},
+  pages     = {35-68},
+  doi       = {10.1002/3527602755.ch2},
   owner     = {Vincent},
-  timestamp = {2019.03.29},
+  timestamp = {2010.06.03},
 }
 
 @Article{Newman2003a,
@@ -30018,6 +30078,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.68.036122},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Newman2003g,
+  author    = {Newman, M. L. and Pennebaker, J. W. and Berry, D. S. and Richards, J. M.},
+  title     = {Lying Words: Predicting Deception from Linguistic Styles},
+  journal   = {Personality and Social Psychology Bulletin},
+  year      = {2003},
+  volume    = {29},
+  number    = {5},
+  pages     = {665-675},
+  doi       = {10.1177/0146167203029005010},
+  owner     = {Vincent},
+  timestamp = {2019.03.29},
 }
 
 @Article{Newman2004c,
@@ -36163,6 +36236,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Narrative_Psychology.html?id=OJFrAAAAIAAJ},
 }
 
+@PhdThesis{Sarkanych2020,
+  author    = {Sarkanych, P.},
+  title     = {Universality of complex systems: partition function zeros analysis and complex networks},
+  school    = {Coventry University},
+  year      = {2020},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.06.20},
+  url       = {https://pureportal.coventry.ac.uk/en/studentTheses/universality-of-complex-systems-partition-function-zeros-analysis},
+}
+
 @Article{Sarkanych2022,
   author    = {Sarkanych, P. and Fedorak, N. and Holovatch, Y. and MacCarron, P. and Yose, J. and Kenna, R.},
   title     = {Network analysis of the Kyiv bylyny cycle - East Slavic epic narratives},
@@ -39346,6 +39430,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.67.056102},
   owner     = {Vincent},
   timestamp = {2019.04.01},
+}
+
+@Article{Szell2010,
+  author    = {Szell, M. and Thurner, S.},
+  title     = {Measuring social dynamics in a massive multiplayer online game},
+  journal   = {Social Networks},
+  year      = {2010},
+  volume    = {32},
+  number    = {4},
+  pages     = {313-329},
+  doi       = {10.1016/j.socnet.2010.06.001},
+  owner     = {Vincent},
+  timestamp = {2017.06.15},
 }
 
 @Article{Szella2010,
@@ -44742,6 +44839,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1098/rsos.171024},
   owner     = {Vincent},
   timestamp = {2017.07.31},
+}
+
+@PhdThesis{Yose2017a,
+  author    = {Yose, J.},
+  title     = {A network scientific approach to the quantitative analysis of epic texts},
+  school    = {Coventry University},
+  year      = {2017},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.06.20},
+  url       = {https://pureportal.coventry.ac.uk/en/studentTheses/a-network-scientific-approach-to-the-quantitative-analysis-of-epi},
 }
 
 @Article{You2020a,
